2003-10-24  David Hyatt  <hyatt@apple.com>

	Fix for 3133375, the minwidth computation for pres is wrong.  There were a couple of bugs here.
	One is that pres only should have a breakable character if they contain a newline.  Otherwise they're
	treated essentially like nowrap.  The other was that m_beginMinWidth and m_endMinWidth needed to be
	set to the maxwidth of the first line and the maxwidth of the last line respectively for pres instead of
	being only the first and last words.
	
        Reviewed by mjs

        * khtml/rendering/render_text.cpp:
        (RenderText::calcMinMaxWidth):

2003-10-24  David Hyatt  <hyatt@apple.com>

	Two fixes to the computation of min/max width for text runs.
	(1) Make sure that pre runs don't add in word-spacing to the last word on a line (e.g., when a newline explicitly
	breaks a pre).
	(2) Fix a bug where breakable characters weren't getting factored into minwidth properly.  When a word got broken
	because of a breakable character, we were treating the breakable character like a space, and not including its
	width as part of the minimum width of the text run.
	
        Reviewed by john

        * khtml/rendering/render_text.cpp:
        (RenderText::calcMinMaxWidth):

2003-10-23  David Hyatt  <hyatt@apple.com>

	This patch fixes the pseudo-elements ::first-line and ::first-letter to inherit styles properly.  More
	specifically it does the following:

	(1) Implements caching of pseudo-styles once computed off the style() which originated the pseudo-style.
	The old code did this, and this was a regression from my previous patch.

	(2) Fixes first-letter checking so that it happens at layout time rather than during render object
	construction time, since that makes first-letter more dynamic and causes it to be discovered in cases
	where it was being missed before.  This fixes the front page of meyerweb.com.

	(3) Make first-letter inherit from first-line like it's supposed to, and also make first-line styles